force-app/main/default/objects/HI_Aasm_Event__c/HI_Aasm_Event__c.object-meta.xml
<CustomObject>
    <label>HI Aasm Event</label>
    <nameField>
        <displayFormat>AE-{00000}</displayFormat>
        <label>HI Aasm Events Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HI Aasm Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>