force-app/main/default/objects/HI_Aasm_Event__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>