force-app/main/default/objects/HI_Aasm_Event__c/fields/Paper_Trail_Whodunnit__c.field-meta.xml
<CustomField>
    <fullName>Paper_Trail_Whodunnit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Paper Trail Whodunnit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>