force-app/main/default/objects/HI_Aasm_Event__c/fields/Recordable_Id__c.field-meta.xml
<CustomField>
    <fullName>Recordable_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Recordable Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>