force-app/main/default/objects/HI_Aasm_Event__c/fields/Recordable_Type__c.field-meta.xml
<CustomField>
    <fullName>Recordable_Type__c</fullName>
    <externalId>true</externalId>
    <label>Recordable Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>