force-app/main/default/objects/HI_Aasm_Event__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>